# LightML

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/lm_eval/: config.yaml  run_eval.py
lightml/: checkpoints.py  cli.py  cloud.py  compare.py  database.py  diff.py  export.py  gui.py  handle.py  metrics.py  readers.py  registry.py  scan.py  stats.py
lightml.egg-info/: PKG-INFO  SOURCES.txt
lightml/models/: checkpoints.py  compare.py  delete.py  metrics.py  registry.py  scan.py
lightml/templates/: dashboard.html
lightml/tests/: conftest.py  simulate_training.py  test_bugfix.py  test_bulk.py  test_compare.py  test_delete.py  test_diff.py  test_registry.py  test_scan.py
server/: main.py
server/routes/: checkpoints.py  dashboard.py  metrics.py  register.py
