[project]
name = "lightml"
version = "0.1.0"
description = "Lightweight model registry"
authors = [{ name = "Pier" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "fastapi"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightml*"]
