[project]
name = "light-ml-registry"
version = "1.0.7"
description = "Lightweight model registry with experiment tracking and dynamic Excel export"
authors = [{ name = "Pier" }]
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "openpyxl>=3.1",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
examples = [
    "pyyaml>=6.0",
    "lm-eval>=0.4",
]

[project.scripts]
lightml = "lightml.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lightml*", "server*"]

[tool.setuptools.package-data]
lightml = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["lightml/tests"]
pythonpath = ["."]